--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                   <input type="text" placeholder="Например: Битрикс, Figma, Макет" class ="input__badwords" id = "key_word_placeholder"/>
                 </div>
                 <div class="keywords__container_button">
-				<input type="button" class="add-button" id="key_word_btn" value = "Добавить" "/>
+				<input type="button" class="add-button" id="key_word_btn" value = "Добавить" />
 				</div>
                 <div class="keywords__container"></div>
               </div>
