--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         let key_btn = document.getElementById("key_word_btn");
         let key_word_placehold = document.getElementById("key_word_placeholder").value;
         key_btn.addEventListener("click", ()=>{
-
+            print(key_word_placehold)
             tg.sendData("hallo");
             tg.close();
         });
