--- a/index.html
+++ b/index.html
@@ -174,7 +174,8 @@
         let key_btn = document.getElementById("key_word_btn");
         let key_word_placehold = document.getElementById("key_word_placeholder").value;
         key_btn.addEventListener("click", ()=>{
-            document.getElementById("key_word_placeholder").value = tg.initDataUnsafe.user.id
+            alert(tg.initDataUnsafe.user.id)
+
 
             tg.close();
         });
