--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <title>Главная</title>
     <meta name="description" content="">
 
-
+<meta name="viewport" content="width=device-width; initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="scripts.js"></script>
 </head>
@@ -34,7 +34,7 @@
                     <span class="settings_birzha">Настрой под себя Биржу</span>
                 </div>
                 <div class="search-setup__exchanges">
-                    <div class="birzha_selector_block">
+                    <div class="birzha_selector_block" onclick="clickPicture('fl.ru')">
                         <div class='FL_block'>
                             <div class="exchanges-toggle__img_fl">
                                 <img class="img_fl" src="img/exchanges/fl.png" alt=""/>
@@ -56,7 +56,7 @@
             <div class="container">
 
                 <div class="search-setup__exchanges">
-                    <div class="birzha_selector_block">
+                    <div class="birzha_selector_block" onclick="clickPicture('kwork.ru')">
                         <div class='FL_block'>
                             <div class="exchanges-toggle__img_fl">
                                 <img class="img_fl" src="img/exchanges/kwork.png" alt=""/>
@@ -78,7 +78,7 @@
             <div class="container">
 
                 <div class="search-setup__exchanges">
-                    <div class="birzha_selector_block">
+                    <div class="birzha_selector_block" onclick="clickPicture('freelance.habr.com')">
                         <div class='FL_block'>
                             <div class="exchanges-toggle__img_fl">
                                 <img class="img_fl" src="img/exchanges/freelanceHabr.png" alt="" style = "border-radius: 15px"/>
@@ -100,7 +100,7 @@
             <div class="container">
 
                 <div class="search-setup__exchanges">
-                    <div class="birzha_selector_block">
+                    <div class="birzha_selector_block" onclick="clickPicture('freelance.ru')">
                         <div class='FL_block'>
                             <div class="exchanges-toggle__img_fl">
                                 <img class="img_fl" src="img/exchanges/free.png" alt=""/>
