--- a/freelancecategory.html
+++ b/freelancecategory.html
@@ -20,6 +20,7 @@
     <meta name="msapplication-navbutton-color" content="#000">
     <meta name="apple-mobile-web-app-status-bar-style" content="#000">
     <title>Главная</title>
+    <meta name="viewport" content="width=device-width; initial-scale=1.0">
     <link rel="stylesheet" href="categeory_style.css">
     <script src="scripts.js"></script>
     <meta name="description" content="">
